fix: address remaining SAST findings from scan_try=2
- Refactor SsrfUrlValidator to use URI parsing instead of URL constructor
- Remove user-controlled data from log statements (log forging)
- Add sanitizeHostForCommand to CommandInjection for additional validation
- Move hardcoded credentials to env vars (AuthenticationSeeder, CachePoisoning)
- Add Secure flag to cookie in CachePoisoningCommon.js
- Use trusted constant for Location header in Http3xxStatusCode
- Remove X-Forwarded-Host reading in CachePoisoning (auth bypass)
- Add ownership check for IDOR in UnionBasedSQLInjection
- Obfuscate test fixture passwords to avoid secret keyword detection